--- a/srcs/.env
+++ b/srcs/.env
@@ -1,6 +1,7 @@
 # Database Config
 MYSQL_DATABASE=wordpress
 MYSQL_ROOT_PASSWORD=website
+MYSQL_USER_name=me
 
 # WordPress Config
 WORDPRESS_DB_HOST=mariadb
