--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,1 +1,10 @@
-FROM mariadb:10.5
+FROM debian:12
+
+RUN apt-get update && apt-get install -y mariadb-server && rm -rf /var/lib/apt/lists/*
+
+COPY Script.sh /usr/local/bin/Script.sh
+RUN chmod +x /usr/local/bin/Script.sh
+
+EXPOSE 3306
+
+CMD ["Script.sh"]
