--- a/srcs/.env
+++ b/srcs/.env
@@ -1,18 +1,27 @@
-# Database Config
-MYSQL_DATABASE=wordpress
-MYSQL_ROOT_PASSWORD=website
-MYSQL_USER_name=me
+# ========================
+# Database Configuration
+# ========================
 
-# WordPress Config
-WORDPRESS_DB_HOST=mariadb
-WORDPRESS_DB_USER=root
+MARIADB_ROOT_PASSWORD=website
+MARIADB_USER_NAME=me
+MARIADB_DATABASE=wordpress
+MARIADB_HOST=mariadb:3306
+
+# ========================
+# WORDPRESS Configuration
+# ========================
+
 WORDPRESS_DB_PASSWORD=website
+WORDPRESS_DB_USER=me
 WORDPRESS_DB_NAME=wordpress
+WORDPRESS_DB_HOST=mariadb:3306
 
+# ========================
 # Networking
+# ========================
+
 WORDPRESS_PORT=9000
 NGINX_PORT=443
 
-# NGINX SSL paths (optional if you wanna be fancy later)
 SSL_CERT_PATH=/etc/nginx/certs/selfsigned.crt
 SSL_KEY_PATH=/etc/nginx/certs/selfsigned.key
