--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,10 +1,13 @@
 FROM debian:12
 
-RUN apt-get update && apt-get install -y mariadb-server && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y mariadb-server
 
-COPY Script.sh /usr/local/bin/Script.sh
+COPY ./tools/50-server.cnf   /etc/mysql/mariadb.conf.d/50-server.cnf
+COPY ./tools/Script.sh       /usr/local/bin/
+
 RUN chmod +x /usr/local/bin/Script.sh
 
 EXPOSE 3306
 
-CMD ["Script.sh"]
+CMD ["bash", "/usr/local/bin/Script.sh"]
+
