--- a/srcs/.env
+++ b/srcs/.env
@@ -11,10 +11,14 @@ MARIADB_HOST=mariadb:3306
 # WORDPRESS Configuration
 # ========================
 
-WORDPRESS_DB_PASSWORD=website
-WORDPRESS_DB_USER=me
-WORDPRESS_DB_NAME=wordpress
-WORDPRESS_DB_HOST=mariadb:3306
+WORDPRESS_DB_PASSWORD=website   # 3
+WORDPRESS_DB_USER=me            # 2
+WORDPRESS_DB_NAME=wordpress     # 1
+WORDPRESS_DB_HOST=mariadb:3306  # 4
+
+WORDPRESS_VERSION=6.5.2
+PHP_VERSION=8.2
+DEBIAN_FRONTEND=noninteractive
 
 # ========================
 # Networking
