--- a/srcs/.env
+++ b/srcs/.env
@@ -20,6 +20,13 @@ WORDPRESS_VERSION=6.5.2
 PHP_VERSION=8.2
 DEBIAN_FRONTEND=noninteractive
 
+WP_PATH=/var/www/html
+WP_URL="https://ksohail-.42.br"
+WP_TITLE="ksohail-.42.br"
+WP_ADMIN_USER=ksohail-
+WP_ADMIN_PASSWORD=ksohail-
+WP_ADMIN_EMAIL=ksohail-@example.com
+
 # ========================
 # Networking
 # ========================
