ftp-server is working

--- a/srcs/.env
+++ b/srcs/.env
@@ -27,6 +27,15 @@ WP_ADMIN_USER=ksohail-
 WP_ADMIN_PASSWORD=ksohail-
 WP_ADMIN_EMAIL=ksohail-@example.com
 
+# =========================
+# FTP Configuration
+# =========================
+
+FTP_USER=me
+FTP_PASSWORD=me
+
+
+
 # ========================
 # Networking
 # ========================
@@ -36,3 +45,4 @@ NGINX_PORT=443
 
 SSL_CERT_PATH=/etc/nginx/certs/selfsigned.crt
 SSL_KEY_PATH=/etc/nginx/certs/selfsigned.key
+
