--- a/srcs/.env
+++ b/srcs/.env
@@ -34,7 +34,12 @@ WP_ADMIN_EMAIL=ksohail-@example.com
 FTP_USER=me
 FTP_PASSWORD=me
 
+# =========================
+# Portainer
+# =========================
 
+PORTAINER_NAME=ksohail
+PORTAINER_PASSWORD=adminpassword123
 
 # ========================
 # Networking
